# Health-Care-Predictive-Model

./: FacilityListingByCounty-20250422-114439.csv  Healthcare per rural area.csv  Hpsa_Find_Export.csv  Insurance Coverage vs County.csv  Pipfile  README.md  pyproject.toml  source.ipynb  source.py
